--- a/configs.json
+++ b/configs.json
@@ -1,4 +1,4 @@
 {
-	"DISCORD_TOKEN": "OTk2ODE3MzcwNDQwMDE2MDIz.G4Cec3.17HKokXmF-eLzYnt83FPls2SJ3T_wt2fdhef-w",
+	"DISCORD_TOKEN": "YOUR DISCORD TOKEN",
 	"PREFIX": "!"
 }
