adicionando mars rover e james webb

--- a/configs.json
+++ b/configs.json
@@ -1,4 +1,4 @@
 {
-	"DISCORD_TOKEN": "OTk2ODE3MzcwNDQwMDE2MDIz.G4Cec3.17HKokXmF-eLzYnt83FPls2SJ3T_wt2fdhef-w",
+	"DISCORD_TOKEN": "OTk2ODE3MzcwNDQwMDE2MDIz.GYcCtA.r9Lhv-CXJKOEFai5AFuk_PgnWM9OCBwaeBeH_4",
 	"PREFIX": "!"
 }
